juneau-commons improvements